Update image sizing.

--- a/slides/0-introduction.ipynb
+++ b/slides/0-introduction.ipynb
@@ -79,7 +79,7 @@
     "\n",
     "*Be sure to follow along in the [notebooks](https://github.com/stefmolin/pandas-workshop/tree/main/notebooks).*\n",
     "\n",
-    "<img width=\"300\" src=\"https://www.pngkey.com/png/detail/42-428839_silhouette-face-bamboo-cartoon-wild-bear-cute-panda.png\" alt=\"Silhouette, Face, Bamboo, Cartoon, Wild, Bear, Cute - Panda Black And White@pngkey.com\">"
+    "<img width=\"30%\" src=\"https://www.pngkey.com/png/detail/42-428839_silhouette-face-bamboo-cartoon-wild-bear-cute-panda.png\" alt=\"Silhouette, Face, Bamboo, Cartoon, Wild, Bear, Cute - Panda Black And White@pngkey.com\" style=\"min-width: 300px\">"
    ]
   }
  ],
