Update slide flow and image sizes in section 1.

--- a/notebooks/1-getting_started_with_pandas.ipynb
+++ b/notebooks/1-getting_started_with_pandas.ipynb
@@ -223,7 +223,7 @@
    "id": "5ad03f4e-5f74-4440-a825-cd8e964006d2",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     },
     "tags": []
    },
@@ -822,7 +822,7 @@
    "id": "54e767f9-adb9-4921-86be-75426fb13846",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     },
     "tags": []
    },
