--- a/slides/1-getting_started_with_pandas.ipynb
+++ b/slides/1-getting_started_with_pandas.ipynb
@@ -15,7 +15,7 @@
     "We will begin by introducing the `Series`, `DataFrame`, and `Index` classes, which are the basic building blocks of the pandas library, and showing how to work with them. By the end of this section, you will be able to create DataFrames and perform operations on them to inspect and filter the data.\n",
     "\n",
     "<div style=\"text-align: center;\">\n",
-    "    <img width=\"400\" src=\"https://hips.hearstapps.com/elleuk.cdnds.net/16/36/3200x1599/gallery-1473083573-pandas.jpg\" alt=\"Waving panda\">\n",
+    "    <img width=\"40%\" src=\"https://hips.hearstapps.com/elleuk.cdnds.net/16/36/3200x1599/gallery-1473083573-pandas.jpg\" alt=\"Waving panda\" style=\"min-width: 400px\">\n",
     "    <div><small><em><a href=\"https://www.elle.com/uk/life-and-culture/culture/news/a31745/10-ways-to-celebrate-pandas-no-longer-being-endangered/\">Source</a></em></small></div>\n",
     "</div>"
    ]
@@ -247,7 +247,7 @@
    "id": "470e1162-6261-4d7d-8628-09138ad675e0",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     },
     "tags": []
    },
@@ -871,7 +871,7 @@
    "id": "08c22017-6e52-4ab4-bc90-8f955ef2be0a",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     },
     "tags": []
    },
@@ -2419,15 +2419,17 @@
    "id": "65367403-e010-4dc7-8cef-d280a8c94fd3",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     },
     "tags": []
    },
    "source": [
     "*Fun fact: This meteorite landed in Namibia and is a tourist attraction.*\n",
     "\n",
-    "<img width=\"125\" style=\"margin-top: -15px; margin-bottom: -8px\" src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/Hoba_meteorite_%2815682150765%29.jpg/1280px-Hoba_meteorite_%2815682150765%29.jpg\" alt=\"Hoba meteorite (source: Wikipedia)\"/>\n",
-    "<div><small style=\"font-size: 10px\"><em>Source: Wikipedia</em></small></div>"
+    "<div>\n",
+    "    <img width=\"25%\" style=\"margin-top: -5px; margin-bottom: -5px; min-width: 200px\" src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/Hoba_meteorite_%2815682150765%29.jpg/1280px-Hoba_meteorite_%2815682150765%29.jpg\" alt=\"Hoba meteorite (source: Wikipedia)\"/>\n",
+    "    <div><small><em>Source: Wikipedia</em></small></div>\n",
+    "</div>"
    ]
   },
   {
@@ -3234,7 +3236,7 @@
    "source": [
     "## Section 1 Complete 🎉\n",
     "\n",
-    "<img width=\"300\" src=\"https://www.pngkey.com/png/detail/11-115894_giant-panda-bear-cuteness-panda-with-bamboo-cartoon.png\" alt=\"Giant Panda Bear Cuteness - Panda With Bamboo Cartoon@pngkey.com\">"
+    "<img width=\"30%\" src=\"https://www.pngkey.com/png/detail/11-115894_giant-panda-bear-cuteness-panda-with-bamboo-cartoon.png\" alt=\"Giant Panda Bear Cuteness - Panda With Bamboo Cartoon@pngkey.com\" style=\"min-width: 300px\">"
    ]
   }
  ],
