--- a/notebooks/2-data_wrangling.ipynb
+++ b/notebooks/2-data_wrangling.ipynb
@@ -294,7 +294,7 @@
    "id": "bc0652f8-87af-43dd-82d0-07ba120b05f8",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     },
     "tags": []
    },
@@ -1544,7 +1544,7 @@
    "id": "1e150b7a-cc6c-4b2a-a32c-13513e1fd518",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     },
     "tags": []
    },
