--- a/slides/2-data_wrangling.ipynb
+++ b/slides/2-data_wrangling.ipynb
@@ -15,7 +15,7 @@
     "To prepare our data for analysis, we need to perform data wrangling. In this section, we will learn how to clean and reformat data (e.g., renaming columns and fixing data type mismatches), restructure/reshape it, and enrich it (e.g., discretizing columns, calculating aggregations, and combining data sources).\n",
     "\n",
     "<div style=\"text-align: center;\">\n",
-    "<img width=\"300\" src=\"https://images.ctfassets.net/cnu0m8re1exe/I3pMkGv5UGGmNN1tB4XG0/73edfcdbe6e1637e5e79e0c3a2d25fbb/panda.jpg?fm=jpg&fl=progressive&w=660&h=433&fit=fill\" alt=\"Panda with bamboo\">\n",
+    "    <img width=\"30%\" src=\"https://images.ctfassets.net/cnu0m8re1exe/I3pMkGv5UGGmNN1tB4XG0/73edfcdbe6e1637e5e79e0c3a2d25fbb/panda.jpg?fm=jpg&fl=progressive&w=660&h=433&fit=fill\" alt=\"Panda with bamboo\" style=\"min-width: 300px\">\n",
     "    <div><small><em><a href=\"https://www.discovermagazine.com/planet-earth/how-pandas-survive-on-a-diet-of-only-bamboo\">Source</a></em></small></div>\n",
     "</div>"
    ]
@@ -318,7 +318,7 @@
    "id": "6b7cd6d9-a7fb-4be0-9d34-1dd57ddca9c0",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     },
     "tags": []
    },
@@ -1587,7 +1587,7 @@
    "id": "2b209530-e30a-4ff9-9f70-acb770eba330",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     },
     "tags": []
    },
@@ -5819,7 +5819,7 @@
    },
    "source": [
     "<div style=\"text-align: center;\">\n",
-    "<img width=\"300\" src=\"https://i0.wp.com/www.untoldwanderlust.com/wp-content/uploads/2017/07/Panda-rolling-around-in-bamboo-in-Chengdu-China.jpg?w=700&ssl=1\" alt=\"Panda Rolling\">\n",
+    "<img width=\"30%\" src=\"https://i0.wp.com/www.untoldwanderlust.com/wp-content/uploads/2017/07/Panda-rolling-around-in-bamboo-in-Chengdu-China.jpg?w=700&ssl=1\" alt=\"Panda Rolling\" style=\"min-width: 300px\">\n",
     "    <div><small><em><a href=\"https://www.untoldwanderlust.com/chengdu-panda-base/\">Source</a></em></small></div>\n",
     "</div>"
    ]
@@ -6905,7 +6905,7 @@
    "source": [
     "## Section 2 Complete 🎉\n",
     "\n",
-    "<img width=\"300\" src=\"https://www.pngkey.com/png/detail/129-1298535_panda-bear-images-cartoon-cute-panda-bear.png\" alt=\"Panda Bear Images - Cartoon Cute Panda Bear@pngkey.com\">"
+    "<img width=\"30%\" src=\"https://www.pngkey.com/png/detail/129-1298535_panda-bear-images-cartoon-cute-panda-bear.png\" alt=\"Panda Bear Images - Cartoon Cute Panda Bear@pngkey.com\" style=\"min-width: 300px\">"
    ]
   }
  ],
