--- a/slides/4-hands_on_data_analysis_lab.ipynb
+++ b/slides/4-hands_on_data_analysis_lab.ipynb
@@ -15,7 +15,7 @@
     "We will practice all that you’ve learned in a hands-on lab. This section features a set of analysis tasks that provide opportunities to apply the material from the previous sections.\n",
     "\n",
     "<div style=\"text-align: center;\">\n",
-    "<img width=\"200\" src=\"https://www.pngkey.com/png/detail/102-1027124_animals-pandas-panda-transparent-background.png\" alt=\"Animals - Pandas - Panda Transparent Background@pngkey.com\">\n",
+    "<img width=\"20%\" src=\"https://www.pngkey.com/png/detail/102-1027124_animals-pandas-panda-transparent-background.png\" alt=\"Animals - Pandas - Panda Transparent Background@pngkey.com\" style=\"min-width: 200px\">\n",
     "</div>"
    ]
   },
@@ -60,7 +60,7 @@
    },
    "source": [
     "## Section 4 Complete 🎉\n",
-    "<img width=\"300\" src=\"https://www.pngkey.com/png/detail/246-2469554_panda-anime-png-png-panda.png\" alt=\"Panda Anime Png - Png Panda@pngkey.com\">"
+    "<img width=\"30%\" src=\"https://www.pngkey.com/png/detail/246-2469554_panda-anime-png-png-panda.png\" alt=\"Panda Anime Png - Png Panda@pngkey.com\" style=\"min-width: 300px\">"
    ]
   },
   {
@@ -78,13 +78,13 @@
     "*I hope you enjoyed the workshop. Note that all the examples were developed exclusively for this workshop &ndash; check out [Hands-On Data Analysis with Pandas](https://www.amazon.com/Hands-Data-Analysis-Pandas-visualization-dp-1800563450/dp/1800563450/) and my [Beyond the Basics: Data Visualization in Python](https://github.com/stefmolin/python-data-viz-workshop) workshop for more.*\n",
     "\n",
     "<div style=\"text-align: center;\">\n",
-    "<img width=\"200\" src=\"https://raw.githubusercontent.com/stefmolin/Hands-On-Data-Analysis-with-Pandas-2nd-edition/master/_img/pandas_drawing.PNG\"></div>"
+    "<img width=\"20%\" src=\"https://raw.githubusercontent.com/stefmolin/Hands-On-Data-Analysis-with-Pandas-2nd-edition/master/_img/pandas_drawing.PNG\" style=\"min-width: 200px\"></div>"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -98,7 +98,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
