Add resource on magics.

--- a/notebooks/3-data_visualization.ipynb
+++ b/notebooks/3-data_visualization.ipynb
@@ -169,6 +169,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "148c1344-29e5-416e-aca4-7b08b0ec7c19",
+   "metadata": {},
+   "source": [
+    "*Tip: Read more about magics [here](https://ipython.readthedocs.io/en/stable/interactive/magics.html).*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "48820846-a8ab-418c-9288-4cfad3230095",
    "metadata": {
     "slideshow": {
