--- a/slides/3-data_visualization.ipynb
+++ b/slides/3-data_visualization.ipynb
@@ -191,6 +191,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "46cc6aa3-92f0-4d29-953f-5cfe0f55efab",
+   "metadata": {},
+   "source": [
+    "*Tip: Read more about magics [here](https://ipython.readthedocs.io/en/stable/interactive/magics.html).*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "02bf0fd6-d328-4266-b082-7a9f29507030",
    "metadata": {
     "slideshow": {
