Change slide flow in section 1.

--- a/notebooks/1-getting_started_with_pandas.ipynb
+++ b/notebooks/1-getting_started_with_pandas.ipynb
@@ -1554,7 +1554,7 @@
    "id": "753004e2-c9ef-4dbf-86cc-fd5d48babeb2",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     },
     "tags": []
    },
