Update slide flow for section 2 solutions.

--- a/slides/2-data_wrangling.ipynb
+++ b/slides/2-data_wrangling.ipynb
@@ -7947,8 +7947,19 @@
     "tags": []
    },
    "source": [
-    "### Solutions\n",
-    "\n",
+    "### Solutions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5dd5a609-061e-4189-82a0-6cfdc538535d",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "tags": []
+   },
+   "source": [
     "##### 1. Read in the meteorite data from the `Meteorite_Landings.csv` file:"
    ]
   },
@@ -7967,7 +7978,7 @@
    "id": "3e469d64-0135-4968-9eac-851ad1d51141",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     },
     "tags": []
    },
