Update slide flow for section 3 solutions.

--- a/slides/3-data_visualization.ipynb
+++ b/slides/3-data_visualization.ipynb
@@ -12119,8 +12119,19 @@
     "tags": []
    },
    "source": [
-    "### Solutions\n",
-    "\n",
+    "### Solutions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8843551c-708c-4536-ad8c-ba620eb0e805",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "tags": []
+   },
+   "source": [
     "##### 1. Create box plots of TSA traveler throughput for each year in the data."
    ]
   },
