Add shortcuts to each section of the workshop.

--- a/slides/1-getting_started_with_pandas.ipynb
+++ b/slides/1-getting_started_with_pandas.ipynb
@@ -7,7 +7,9 @@
     "slideshow": {
      "slide_type": "slide"
     },
-    "tags": []
+    "tags": [
+     "id_section-1"
+    ]
    },
    "source": [
     "# Section 1: Getting Started With Pandas\n",
