--- a/slides/2-data_wrangling.ipynb
+++ b/slides/2-data_wrangling.ipynb
@@ -7,7 +7,9 @@
     "slideshow": {
      "slide_type": "slide"
     },
-    "tags": []
+    "tags": [
+     "id_section-2"
+    ]
    },
    "source": [
     "# Section 2: Data Wrangling\n",
