--- a/slides/3-data_visualization.ipynb
+++ b/slides/3-data_visualization.ipynb
@@ -7,7 +7,9 @@
     "slideshow": {
      "slide_type": "slide"
     },
-    "tags": []
+    "tags": [
+     "id_section-3"
+    ]
    },
    "source": [
     "# Section 3: Data Visualization\n",
