--- a/slides/4-hands_on_data_analysis_lab.ipynb
+++ b/slides/4-hands_on_data_analysis_lab.ipynb
@@ -7,7 +7,9 @@
     "slideshow": {
      "slide_type": "slide"
     },
-    "tags": []
+    "tags": [
+     "id_section-4"
+    ]
    },
    "source": [
     "# Section 4: Hands-On Data Analysis Lab\n",
