Add link to end.

--- a/slides/4-hands_on_data_analysis_lab.ipynb
+++ b/slides/4-hands_on_data_analysis_lab.ipynb
@@ -72,7 +72,9 @@
     "slideshow": {
      "slide_type": "slide"
     },
-    "tags": []
+    "tags": [
+     "id_fin"
+    ]
    },
    "source": [
     "# Thank you!\n",
@@ -80,7 +82,11 @@
     "*I hope you enjoyed the workshop. Note that all the examples were developed exclusively for this workshop &ndash; check out [Hands-On Data Analysis with Pandas](https://www.amazon.com/Hands-Data-Analysis-Pandas-visualization-dp-1800563450/dp/1800563450/) and my [Beyond the Basics: Data Visualization in Python](https://github.com/stefmolin/python-data-viz-workshop) workshop for more.*\n",
     "\n",
     "<div style=\"text-align: center;\">\n",
-    "<img width=\"20%\" src=\"https://raw.githubusercontent.com/stefmolin/Hands-On-Data-Analysis-with-Pandas-2nd-edition/master/_img/pandas_drawing.PNG\" style=\"min-width: 200px\"></div>"
+    "    <img width=\"20%\" src=\"https://raw.githubusercontent.com/stefmolin/Hands-On-Data-Analysis-with-Pandas-2nd-edition/master/_img/pandas_drawing.PNG\" style=\"min-width: 200px\">\n",
+    "    <div><small>\n",
+    "        <a href=\"https://linktr.ee/stefaniemolin\">linktr.ee/stefaniemolin</a>\n",
+    "    </small></div>\n",
+    "</div>"
    ]
   }
  ],
