Reduce lecture:exercise time ratio in section 1.

--- a/notebooks/1-getting_started_with_pandas.ipynb
+++ b/notebooks/1-getting_started_with_pandas.ipynb
@@ -2,6 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "654d989b-ca3b-4815-94f8-fe640ebbe9d2",
+   "metadata": {},
+   "source": [
+    "[![View slides in browser](https://img.shields.io/badge/view-slides-orange?logo=github)](https://stefmolin.github.io/pandas-workshop/slides/html/workshop.slides.html#/section-1)\n",
+    "\n",
+    "---\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4eedaf6c-296c-442c-92ec-60b8a4595781",
    "metadata": {
     "slideshow": {
@@ -1015,6 +1026,54 @@
   },
   {
    "cell_type": "markdown",
+   "id": "462f9df6-c1fc-4eaa-9c43-e810badb2257",
+   "metadata": {},
+   "source": [
+    "### [Exercise 1.1](./workbook.ipynb#Exercise-1.1)\n",
+    "\n",
+    "##### Create a DataFrame by reading in the `2019_Yellow_Taxi_Trip_Data.csv` file. Examine the first 5 rows."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "317e4c45-7afe-425f-a7a2-cad55f20a91e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Complete exercise 1.1 in the workbook.ipynb file\n",
+    "# Click on `Exercise 1.1` above to open the workbook.ipynb file\n",
+    "\n",
+    "# WARNING: if you complete the exercise here, your cell numbers\n",
+    "# for the rest of the training might not match the slides"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "230a3c7f-8907-43d1-b7e0-9fe678c04d17",
+   "metadata": {},
+   "source": [
+    "### [Exercise 1.2](./workbook.ipynb#Exercise-1.2)\n",
+    "\n",
+    "##### Find the dimensions (number of rows and number of columns) in the data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "ceab7259-c412-4f8b-b0be-e3cc801836b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Complete exercise 1.2 in the workbook.ipynb file\n",
+    "# Click on `Exercise 1.2` above to open the workbook.ipynb file\n",
+    "\n",
+    "# WARNING: if you complete the exercise here, your cell numbers\n",
+    "# for the rest of the training might not match the slides"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0d63f1c9-2b23-4585-8df0-358159b26801",
    "metadata": {
     "slideshow": {
@@ -1045,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "2a084a5d-3d1c-4bef-9704-7c7ec69a73b1",
    "metadata": {},
    "outputs": [
@@ -1066,7 +1125,7 @@
        "Name: name, Length: 45716, dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1090,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "df5c98ef-0227-44e4-8038-de151a9d8717",
    "metadata": {},
    "outputs": [
@@ -1197,7 +1256,7 @@
        "[45716 rows x 2 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1221,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "c1a63e64-8a01-4762-b1c2-79b2f1068ea9",
    "metadata": {},
    "outputs": [
@@ -1329,7 +1388,7 @@
        "103  01/01/1811 12:00:00 AM  41.68333  -3.80000     (41.68333, -3.8)  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1355,7 +1414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "50087ab8-2a1d-4312-a7c7-791bc7c35e9b",
    "metadata": {},
    "outputs": [
@@ -1427,7 +1486,7 @@
        "103  Berlanguillas             L6    1440.0  01/01/1811 12:00:00 AM"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1451,7 +1510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "eb7a1cdb-e0cc-4c58-ae96-1dabe4d5fad7",
    "metadata": {},
    "outputs": [
@@ -1525,7 +1584,7 @@
        "104     960.0  Fell  01/01/2004 12:00:00 AM"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1564,7 +1623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "1f59f4cb-9f82-42ef-8c5f-c42d0f48447d",
    "metadata": {},
    "outputs": [
@@ -1585,7 +1644,7 @@
        "Length: 45716, dtype: bool"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1622,7 +1681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "46727a7f-d5e7-4de9-b69a-762413de9567",
    "metadata": {},
    "outputs": [
@@ -1745,7 +1804,7 @@
        "920  01/01/1947 12:00:00 AM  46.16000  134.65333      (46.16, 134.65333)  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1782,7 +1841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "bde8231a-3f4a-43e1-a90e-051a125a00af",
    "metadata": {},
    "outputs": [
@@ -1905,7 +1964,7 @@
        "920  01/01/1947 12:00:00 AM  46.16000  134.65333      (46.16, 134.65333)  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1957,7 +2016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "01433b12-c3f2-4680-a654-bb20bc8c2157",
    "metadata": {},
    "outputs": [
@@ -1969,7 +2028,7 @@
        "Name: fall, dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2006,7 +2065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "3d666cd2-eca0-4634-86a5-aebbcda99522",
    "metadata": {},
    "outputs": [
@@ -2016,7 +2075,7 @@
        "32.6"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2040,7 +2099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "5d97fd11-12eb-4970-b042-6cbbd35a3a23",
    "metadata": {},
    "outputs": [
@@ -2054,7 +2113,7 @@
        "Name: mass (g), dtype: float64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2078,7 +2137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "id": "585af605-e601-49b6-bd1f-4838ab993302",
    "metadata": {},
    "outputs": [
@@ -2088,7 +2147,7 @@
        "60000000.0"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2112,7 +2171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "29720ccc-3855-42f7-a0d0-e41a83cf1bef",
    "metadata": {},
    "outputs": [
@@ -2132,7 +2191,7 @@
        "Name: 16392, dtype: object"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2156,7 +2215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "id": "79c2a1db-0eeb-4173-964a-a38741c059ba",
    "metadata": {},
    "outputs": [
@@ -2166,7 +2225,7 @@
        "466"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2190,7 +2249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "id": "3ac57de5-7734-478a-9772-feb82890d5ef",
    "metadata": {},
    "outputs": [
@@ -2202,7 +2261,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2235,7 +2294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "id": "f0297d45-1d86-411f-ad8e-74cfaa3b2389",
    "metadata": {},
    "outputs": [
@@ -2448,7 +2507,7 @@
        "max                        NaN     81.166670    354.473330         NaN  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2483,109 +2542,53 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e9b4667-6427-4c6d-ab25-d95d218b4bda",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
+   "id": "5f26b130-6bc5-47ca-81f2-b977cfd8ef85",
+   "metadata": {},
    "source": [
-    "## Up Next: Data Wrangling\n",
+    "### [Exercise 1.3](./workbook.ipynb#Exercise-1.3)\n",
     "\n",
-    "Let's take a break for some exercises to check your understanding:\n",
+    "##### Using the data in the `2019_Yellow_Taxi_Trip_Data.csv` file, calculate summary statistics for the `fare_amount`, `tip_amount`, `tolls_amount`, and `total_amount` columns."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "876cafcb-00ab-4f5a-8b3c-bfead4f0b14c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Complete exercise 1.3 in the workbook.ipynb file\n",
+    "# Click on `Exercise 1.3` above to open the workbook.ipynb file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19fa9e6a-d1e5-4202-ba94-6fa5c8bbe5f7",
+   "metadata": {},
+   "source": [
+    "### [Exercise 1.4](./workbook.ipynb#Exercise-1.4)\n",
     "\n",
-    "1. Create a DataFrame by reading in the `2019_Yellow_Taxi_Trip_Data.csv` file.\n",
-    "2. Find the dimensions (number of rows and number of columns) in the data.\n",
-    "3. Calculate summary statistics for the `fare_amount`, `tip_amount`, `tolls_amount`, and `total_amount` columns.\n",
-    "4. Isolate the `fare_amount`, `tip_amount`, `tolls_amount`, and `total_amount` for the longest trip (`trip_distance`)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "afc4e927-8e40-4092-b016-eea7dd726d19",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    },
-    "tags": []
-   },
-   "source": [
-    "### Exercises\n",
-    "\n",
-    "##### 1. Create a DataFrame by reading in the `2019_Yellow_Taxi_Trip_Data.csv` file:"
+    "##### Find the dimensions (number of rows and number of columns) in the data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "289d920d-e636-4e6d-858f-10976c710f05",
+   "execution_count": 33,
+   "id": "6402bb24-3da9-48e5-bde1-0b8a9576f00d",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "71878b65-28d9-4cb0-8da5-149a34865e3a",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    },
-    "tags": []
-   },
    "source": [
-    "##### 2. Find the dimensions (number of rows and number of columns) in the data:"
+    "# Complete exercise 1.4 in the workbook.ipynb file\n",
+    "# Click on `Exercise 1.4` above to open the workbook.ipynb file"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "51598cbc-74f0-4447-9a24-6ac3634999cb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "39ca0eb6-5445-4301-922f-63b8cdeb86b9",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    },
-    "tags": []
-   },
-   "source": [
-    "##### 3. Calculate summary statistics for the `fare_amount`, `tip_amount`, `tolls_amount`, and `total_amount` columns:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "26fb8364-8690-4938-9362-ae4e22f01eb1",
+   "id": "68c8ccd0-3a3d-4fab-86c1-fd5a136f0540",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8cbb68ca-1056-46fa-8efb-d4123874d674",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    },
-    "tags": []
-   },
    "source": [
-    "##### 4. Isolate the `fare_amount`, `tip_amount`, `tolls_amount`, and `total_amount` for the longest trip (`trip_distance`):"
+    "## Up Next: [Data Wrangling](./2-data_wrangling.ipynb)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "44cba726-3f79-4d96-a4dc-a07eeb316168",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
