Add section 2 exercises to workbook.

--- a/notebooks/workbook.ipynb
+++ b/notebooks/workbook.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "770a499f-fa07-4ca0-8ddd-c50e76eb0599",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Workbook\n",
     "\n",
@@ -95,13 +97,108 @@
     "### Section 2\n",
     "\n",
     "#### Exercise 2.1\n",
-    "##### "
+    "##### Read in the meteorite data from the `Meteorite_Landings.csv` file, rename the `mass (g)` column to `mass`, and drop all the latitude and longitude columns. Sort the result by mass in descending order."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d137343-300c-46c2-ac86-b467c1296cee",
+   "id": "ada49a08-cda7-42ee-ade9-8bb2a2c5a9b8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6994b42d-8205-4584-84a0-b3a7fa56c9b1",
+   "metadata": {},
+   "source": [
+    "#### Exercise 2.2\n",
+    "##### Using the meteorite data from the `Meteorite_Landings.csv` file, update the `year` column to only contain the year, convert it to a numeric data type, and create a new column indicating whether the meteorite was observed falling before 1970. Set the index to the `id` column and extract all the rows with IDs between 10,036 and 10,040 (inclusive) with `loc[]`.\n",
+    "\n",
+    "###### **Hint 1**: Use `year.str.slice()` to grab a substring.\n",
+    "\n",
+    "###### **Hint 2**: Make sure to sort the index before using `loc[]` to select the range.\n",
+    "\n",
+    "###### **Bonus**: There's a data entry error in the `year` column. Can you find it? (Don't spend too much time on this.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02605233-73c5-4cd9-8134-b38ab749e8df",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16d1f8ab-ad56-412d-8df7-a59252f282cf",
+   "metadata": {},
+   "source": [
+    "#### Exercise 2.3\n",
+    "##### Using the meteorite data from the `Meteorite_Landings.csv` file, create a pivot table that shows both the number of meteorites and the 95th percentile of meteorite mass for those that were found versus observed falling per year from 2005 through 2009 (inclusive). Hint: Be sure to convert the `year` column to a number as we did in the previous exercise."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "511433c4-5a9d-41a4-8050-0e953225da0e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4243c25b-6b5d-4fec-a818-3766be46c7a1",
+   "metadata": {},
+   "source": [
+    "#### Exercise 2.4\n",
+    "##### Using the meteorite data from the `Meteorite_Landings.csv` file, compare summary statistics of the mass column for the meteorites that were found versus observed falling."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79aebbf8-1935-449f-94d8-aea0e1b67b4b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9fb76130-c968-4d24-bf11-3337f846a621",
+   "metadata": {},
+   "source": [
+    "#### Exercise 2.5\n",
+    "##### Using the taxi trip data in the `2019_Yellow_Taxi_Trip_Data.csv` file, resample the data to an hourly frequency based on the dropoff time. Calculate the total `trip_distance`, `fare_amount`, `tolls_amount`, and `tip_amount`, then find the 5 hours with the most tips."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f5423f5-c685-4bb2-ac01-8d334d26f341",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b878c7da-bd82-4e95-9302-e68d67b56f31",
+   "metadata": {},
+   "source": [
+    "--- \n",
+    "\n",
+    "### Section 3\n",
+    "\n",
+    "#### Exercise 3.1\n",
+    "##### TBD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d275b26-c701-4c32-b480-8a4b0119f830",
    "metadata": {},
    "outputs": [],
    "source": []
