Add section 3 exercises to workbook.

--- a/notebooks/workbook.ipynb
+++ b/notebooks/workbook.ipynb
@@ -192,13 +192,47 @@
     "### Section 3\n",
     "\n",
     "#### Exercise 3.1\n",
-    "##### TBD"
+    "##### Using the TSA traveler throughput data in the `tsa_melted_holiday_travel.csv` file, create box plots traveler throughput for each year in the data. Hint: Pass `kind='box'` into the `plot()` method to generate box plots."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "0d275b26-c701-4c32-b480-8a4b0119f830",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6bdaffc7-b865-41cd-bd6a-fb02576ce814",
+   "metadata": {},
+   "source": [
+    "#### Exercise 3.2\n",
+    "##### Using the TSA traveler throughput data in the `tsa_melted_holiday_travel.csv` file, create a heatmap that shows the 2019 TSA median traveler throughput by day of week and month."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9afe6aa8-9078-4dd8-98bb-7f68976f97a5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81436a29-c7ca-40a3-b1c5-7a1947709bd3",
+   "metadata": {},
+   "source": [
+    "#### Exercise 3.3\n",
+    "##### Annotate the medians in the box plot from *[Exercise 3.1](#Exercise-3.1)*. Hint: The `x` coordinates will be 1, 2, and 3 for 2019, 2020, and 2021, respectively. Alternatively, to avoid hardcoding values, you can use the `Axes.get_xticklabels()` method, in which case you should look at the [documentation](https://matplotlib.org/stable/api/text_api.html) for the `Text` class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0d32c60-fd9f-4b35-a6ec-de1489951e16",
    "metadata": {},
    "outputs": [],
    "source": []
