Fix typo in ex 3.1; update links.

--- a/notebooks/3-data_visualization.ipynb
+++ b/notebooks/3-data_visualization.ipynb
@@ -5311,7 +5311,7 @@
    "source": [
     "### [Exercise 3.1](./workbook.ipynb#Exercise-3.1)\n",
     "\n",
-    "##### Using the TSA traveler throughput data in the `tsa_melted_holiday_travel.csv` file, create box plots traveler throughput for each year in the data. Hint: Pass `kind='box'` into the `plot()` method to generate box plots."
+    "##### Using the TSA traveler throughput data in the `tsa_melted_holiday_travel.csv` file, create box plots for traveler throughput for each year in the data. Hint: Pass `kind='box'` into the `plot()` method to generate box plots."
    ]
   },
   {
