--- a/slides/2-data_wrangling.ipynb
+++ b/slides/2-data_wrangling.ipynb
@@ -1235,7 +1235,6 @@
      "slide_type": "slide"
     },
     "tags": [
-     "id_exercises-section-1-part-2",
      "id_exercise-2-1"
     ]
    },
@@ -1253,7 +1252,6 @@
      "slide_type": "subslide"
     },
     "tags": [
-     "id_solutions-section-1-part-2",
      "id_solution-2-1"
     ]
    },
@@ -2397,7 +2395,7 @@
     "tags": []
    },
    "source": [
-    "**NOTE**: The `pd.to_datetime()` function is another option here; however, it will only be able to convert dates that are valid unix times (on or after January 1, 1970), which will cause some entries that do have years to be marked as not having one. More information can be found in the pandas documentation [here](https://pandas.pydata.org/docs/reference/api/pandas.to_datetime.html). For reference, this is how the conversion can be done:\n",
+    "**Note**: The `pd.to_datetime()` function is another option here; however, it will only be able to convert dates that are valid unix times (on or after January 1, 1970), which will cause some entries that do have years to be marked as not having one. More information can be found in the pandas documentation [here](https://pandas.pydata.org/docs/reference/api/pandas.to_datetime.html). For reference, this is how the conversion can be done:\n",
     "\n",
     "```python\n",
     "pd.to_datetime(\n",
