--- a/notebooks/workbook.ipynb
+++ b/notebooks/workbook.ipynb
@@ -192,7 +192,7 @@
     "### Section 3\n",
     "\n",
     "#### Exercise 3.1\n",
-    "##### Using the TSA traveler throughput data in the `tsa_melted_holiday_travel.csv` file, create box plots traveler throughput for each year in the data. Hint: Pass `kind='box'` into the `plot()` method to generate box plots."
+    "##### Using the TSA traveler throughput data in the `tsa_melted_holiday_travel.csv` file, create box plots for traveler throughput for each year in the data. Hint: Pass `kind='box'` into the `plot()` method to generate box plots."
    ]
   },
   {
