Add more slide names to section 1.

--- a/slides/1-getting_started_with_pandas.ipynb
+++ b/slides/1-getting_started_with_pandas.ipynb
@@ -48,7 +48,9 @@
     "slideshow": {
      "slide_type": "slide"
     },
-    "tags": []
+    "tags": [
+     "id_anatomy-of-a-dataframe"
+    ]
    },
    "source": [
     "## Anatomy of a DataFrame\n",
@@ -210,7 +212,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_series"
+    ]
    },
    "source": [
     "#### Series:"
@@ -251,7 +255,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_columns-and-index"
+    ]
    },
    "source": [
     "#### Columns:"
@@ -344,7 +350,9 @@
     "slideshow": {
      "slide_type": "slide"
     },
-    "tags": []
+    "tags": [
+     "id_creating-dataframes"
+    ]
    },
    "source": [
     "## Creating DataFrames\n",
@@ -359,7 +367,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_read-csv"
+    ]
    },
    "source": [
     "### Using a flat file"
@@ -384,7 +394,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_api-request"
+    ]
    },
    "source": [
     "### Using data from an API\n",
@@ -422,7 +434,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_create-from-payload"
+    ]
    },
    "source": [
     "Create the DataFrame with the resulting payload:"
@@ -587,7 +601,9 @@
     "slideshow": {
      "slide_type": "slide"
     },
-    "tags": []
+    "tags": [
+     "id_inspecting-the-data"
+    ]
    },
    "source": [
     "## Inspecting the data\n",
@@ -614,7 +630,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_rows-and-columns"
+    ]
    },
    "source": [
     "#### How many rows and columns are there?"
@@ -684,7 +702,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_dtypes"
+    ]
    },
    "source": [
     "#### What type of data does each column currently hold?"
@@ -728,7 +748,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_head"
+    ]
    },
    "source": [
     "#### What does the data look like?"
@@ -875,7 +897,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_tail"
+    ]
    },
    "source": [
     "Sometimes there may be extraneous data at the end of the file, so checking the bottom few rows is also important:"
@@ -1024,7 +1048,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_info-method"
+    ]
    },
    "source": [
     "#### Get some information about the DataFrame"
@@ -1391,7 +1417,9 @@
     "slideshow": {
      "slide_type": "slide"
     },
-    "tags": []
+    "tags": [
+     "id_extracting-subsets"
+    ]
    },
    "source": [
     "## Extracting subsets\n",
@@ -1406,7 +1434,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_selecting-columns"
+    ]
    },
    "source": [
     "#### Selecting columns\n",
@@ -1584,7 +1614,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_selecting-rows"
+    ]
    },
    "source": [
     "#### Selecting rows"
@@ -1716,7 +1748,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_indexing"
+    ]
    },
    "source": [
     "#### Indexing\n",
@@ -1912,7 +1946,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_filtering-with-boolean-masks"
+    ]
    },
    "source": [
     "#### Filtering with Boolean masks\n",
@@ -2145,7 +2181,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_query-method"
+    ]
    },
    "source": [
     "An alternative to this is the `query()` method:"
@@ -2155,7 +2193,9 @@
    "cell_type": "code",
    "execution_count": 23,
    "id": "2ef48350-5dc0-49b2-93e1-b02f715d18a3",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -2324,7 +2364,9 @@
     "slideshow": {
      "slide_type": "slide"
     },
-    "tags": []
+    "tags": [
+     "id_calculating-summary-statistics"
+    ]
    },
    "source": [
     "## Calculating summary statistics\n",
@@ -2339,7 +2381,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_value-counts"
+    ]
    },
    "source": [
     "#### How many of the meteorites were found versus observed falling?"
@@ -2388,7 +2432,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_quantiles"
+    ]
    },
    "source": [
     "#### What was the mass of the average meterorite?"
@@ -2460,7 +2506,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_max-and-idxmax"
+    ]
    },
    "source": [
     "#### What was the mass of the heaviest meteorite?"
@@ -2556,7 +2604,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_unique-and-nunique"
+    ]
    },
    "source": [
     "#### How many different types of meteorite classes are represented in this dataset?"
@@ -2634,7 +2684,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_describe-method"
+    ]
    },
    "source": [
     "#### Get some summary statistics on the data itself\n",
